crates/uitest/fixtures/parser/struct_missing_body.snap
---
source: crates/uitest/tests/parser.rs
expression: diags
input_file: crates/uitest/fixtures/parser/struct_missing_body.fe
---
error[1-0001]: unexpected token
  ┌─ struct_missing_body.fe:4:1
  │
4 │ struct T<U>
  │ ^^^^^^ unexpected token

error[1-0001]: unexpected token
  ┌─ struct_missing_body.fe:4:1
  │
4 │ struct T<U>
  │ ^^^^^^ unexpected token

error[1-0001]: unexpected token
  ┌─ struct_missing_body.fe:4:1
  │
4 │ struct T<U>
  │ ^^^^^^ unexpected token

error[1-0001]: expected struct field definition
  ┌─ struct_missing_body.fe:4:1
  │
4 │ struct T<U>
  │ ^^^^^^ expected struct field definition

error[1-0001]: expected newline after item definition
  ┌─ struct_missing_body.fe:4:1
  │
4 │ struct T<U>
  │ ^^^^^^ expected newline after item definition

error[1-0001]: unexpected token
  ┌─ struct_missing_body.fe:6:1
  │
6 │ struct Foo {}
  │ ^^^^^^ unexpected token

error[1-0001]: unexpected token
  ┌─ struct_missing_body.fe:6:1
  │
6 │ struct Foo {}
  │ ^^^^^^ unexpected token

error[1-0001]: expected struct field definition
  ┌─ struct_missing_body.fe:6:1
  │
6 │ struct Foo {}
  │ ^^^^^^ expected struct field definition

error[1-0001]: expected newline after item definition
  ┌─ struct_missing_body.fe:6:1
  │
6 │ struct Foo {}
  │ ^^^^^^ expected newline after item definition


